tests/checker/good/lib/TestLibDiamondRight.scillib
scilla_version 0

import TestLibDiamondBottom

library TestLibDiamondRight
