tests/checker/bad/lib/TestLibDiamondLeftCycle.scillib
scilla_version 0

import TestLibDiamondBottomCycle

library TestLibDiamondLeftCycle
